Create lessons collection

--- a/_lessons/101.html
+++ b/_lessons/101.html
@@ -50,7 +50,7 @@ layout: false
 - The solution: transform the raw data into a shape that’s ready for analytics.
 - **dbt puts this transformation firmly within the reach of anyone who knows SQL**
 
-<img src="/lessons/img/101-modern-data-stack.png" style="width: 100%;">
+<img src="/lessons/img/{{page.lesson}}/modern-data-stack.png" style="width: 100%;">
 
 
 ???
@@ -59,7 +59,7 @@ layout: false
 
 ## Enter: Analytics Engineer
 
-<img src="/lessons/img/101-role-comparison.png" style="width: 100%;">
+<img src="/lessons/img/{{page.lesson}}/role-comparison.png" style="width: 100%;">
 
 ???
 What do these software engineering best practices look like?
