--- a/_lessons/102.html
+++ b/_lessons/102.html
@@ -171,4 +171,4 @@ template: title
     — Any errors are sent to a Slack channel
 3. Your BI tool is connected ot the transformed data
 
-<img src="/lessons/img/102_1.png" style="width: 100%;">
+<img src="/lessons/img/{{page.lesson}}/ae-workflow.png" style="width: 100%;">
