--- a/_lessons/105.html
+++ b/_lessons/105.html
@@ -29,11 +29,11 @@ Data is data is data is data. There isn't a well understood distinction between
 "source" data and "transformed" data. (Secretly, teams of data
 engineers are transforming data all the time, but you wouldn't know it.)
 
-<img src="/lessons/img/105_1.png" class="img-center">
+<img src="/lessons/img/{{page.lesson}}/fact-dims.png" class="img-center">
 
 ---
 
-<img src="/lessons/img/105_2.png" class="img-center">
+<img src="/lessons/img/{{page.lesson}}/mmorpg-erd.png" class="img-center">
 
 ---
 
@@ -93,7 +93,7 @@ implementation strategies are still applicable._
 
 # Before
 
-<img src="/lessons/img/105_3.png" class="img-center">
+<img src="/lessons/img/{{page.lesson}}/fact-sales-erd.png" class="img-center">
 
 ---
 
@@ -123,7 +123,7 @@ GROUP BY
 
 # After
 
-<img src="/lessons/img/105_4.png" class="img-center">
+<img src="/lessons/img/{{page.lesson}}/fact-sales-dag.png" class="img-center">
 
 ---
 
@@ -205,7 +205,7 @@ find, and easy to infer contents?
 - Who is your end user? Is it a person writing SQL, or a BI tool pointed to a production schema?
 ]
 
-<img src="/lessons/img/105_6.png" style="width: 30%; float: right;">
+<img src="/lessons/img/{{page.lesson}}/mode-sidebar.png" style="width: 30%; float: right;">
 
 ---
 
@@ -216,9 +216,9 @@ template: title
 
 # [How we structure our dbt projects](https://discourse.getdbt.com/t/how-we-structure-our-dbt-projects/355)
 
-<img src="/lessons/img/105_7.png" class="img-center">
+<img src="/lessons/img/{{page.lesson}}/discourse-stats.png" class="img-center">
 &nbsp;
-<img src="/lessons/img/105_8.png" class="img-center">
+<img src="/lessons/img/{{page.lesson}}/discourse-intro.png" class="img-center">
 
 ---
 
@@ -293,7 +293,7 @@ template: title
 &harr;
 <span style="color: navy;">dim</span></h3>
 
-<img src="/lessons/img/105_9.png" style="width: 100%;">
+<img src="/lessons/img/{{page.lesson}}/dag-grouped.png" style="width: 100%;">
 
 ???
 Instructor: draw circles/boxes around the different "model groups" (sources,
@@ -413,7 +413,7 @@ group by 1,2
 
 # Who can write that SQL?
 
-<img src="/lessons/img/105_10.png" class="img-center">
+<img src="/lessons/img/{{page.lesson}}/bi-logos.png" class="img-center">
 ---
 
 # Working session
