--- a/_lessons/107.html
+++ b/_lessons/107.html
@@ -77,13 +77,13 @@ renamed as (
 
 # Sources are green...
 
-<img src="/lessons/img/107_1.png" class="img-center">
+<img src="/lessons/img/{{page.lesson}}/dag-source.png" class="img-center">
 
 ---
 
 # And green is good
 
-<img src="/lessons/img/107_2.png" class="img-center">
+<img src="/lessons/img/{{page.lesson}}/freshness-viz.png" class="img-center">
 
 ---
 
@@ -195,13 +195,13 @@ for more information on this model.
 
 ---
 
-<img src="/lessons/img/107_3.png" class="img-center">
+<img src="/lessons/img/{{page.lesson}}/sp-sesh-docs.png" class="img-center">
 
 &nbsp;
 
-<img src="/lessons/img/107_4.png" class="img-center">
+<img src="/lessons/img/{{page.lesson}}/sp-sesh-cols.png" class="img-center">
 ---
-<img src="/lessons/img/107_5.png" class="img-center">
+<img src="/lessons/img/{{page.lesson}}/sp-sesh-dag.png" class="img-center">
 ---
 
 ## dbt CLI
@@ -211,7 +211,7 @@ dbt docs serve
 ```
 
 ## dbt Cloud
-<img src="/lessons/img/107_6.png" style="width: 90%; float: left;">
+<img src="/lessons/img/{{page.lesson}}/job-config-gen-docs.png" style="width: 90%; float: left;">
 
 ---
 
