--- a/_lessons/201.html
+++ b/_lessons/201.html
@@ -6,6 +6,9 @@ estimated_teaching_time: 45
 estimated_working_session: 0
 teaching_method: 15 minutes for recap at start. 30 minutes of one-sided lecture
 ---
+
+<!-- just putting this here to prevent a silly jekyll warning at compile time -->
+
 layout: false
 {% raw %}
 <!--
