--- a/_lessons/202.html
+++ b/_lessons/202.html
@@ -165,7 +165,9 @@ Today I want strawberry ice cream!
 
 In SQL???
 
-<img src="/lessons/img/202_1.png" style="width: 100%;">
+{% endraw %}
+<img src="/lessons/img/{{page.lesson}}/hn-loops.png" style="width: 100%;">
+{% raw %}
 
 SQL is a highly performant and _very_ declarative language.
 
