--- a/_lessons/204.html
+++ b/_lessons/204.html
@@ -13,7 +13,7 @@ layout: false
 
 --
 
-<img src="/lessons/img/204_1.png" class="img-center">
+<img src="/lessons/img/{{page.lesson}}/galaxy.png" class="img-center">
 
 ---
 
@@ -69,7 +69,7 @@ id,name,favorite_color,is_creative
 ---
 
 class: center, middle
-<img src="/lessons/img/204_2.png" style="width: 75%;">
+<img src="/lessons/img/{{page.lesson}}/butterfly.png" style="width: 75%;">
 
 ---
 
@@ -110,7 +110,7 @@ fom products
 where trending = true
 ```
 
-<img src="/lessons/img/204_3.png" style="width: 100%;">
+<img src="/lessons/img/{{page.lesson}}/superstore.png" style="width: 100%;">
 
 ---
 
@@ -150,7 +150,7 @@ Both!
 - Power your application with a transactional database
 - Analyze data with an analytical database
 
-<img src="/lessons/img/204_4.png" style="width: 100%;">
+<img src="/lessons/img/{{page.lesson}}/stack.png" style="width: 100%;">
 
 ---
 
