Fixup docs pres

--- a/_lessons/107.html
+++ b/_lessons/107.html
@@ -15,6 +15,7 @@ our renumbering
 
 ---
 
+layout: false
 # Why is documentation important?
 
 _Low quality research manifests as an environment of knowledge cacophony, 
