--- a/_lessons/106.html
+++ b/_lessons/106.html
@@ -16,7 +16,7 @@ layout: false
 # If any of the following is true...
 
 * I'm switching my email marketing platform. (Or: I'm switching the tool that
-extracts and loads _from_ my email marketing platform.) I want to know which 
+extracts and loads _from_ my email marketing platform.) I want to know which
 final models depend on that source data.
 --
 
@@ -24,11 +24,11 @@ final models depend on that source data.
 in a different database/schema.
 --
 
-* Because no one is perfect, my data loading tools experience occasional 
+* Because no one is perfect, my data loading tools experience occasional
 hiccups or wrinkles that result in delayed or duplicated data
 --
 
-* My SQL transformations are working as expected, but my transformed data just 
+* My SQL transformations are working as expected, but my transformed data just
 doesn't look right. Help?!?!
 --
 
@@ -104,3 +104,9 @@ background-color: orange
 class: middle, bottom
 
 # Questions?
+
+---
+name:working-session
+
+# Working session
+* Add `sources` for our two data sources: `jaffle_shop` and `stripe`.
