--- a/_lessons/108.html
+++ b/_lessons/108.html
@@ -123,6 +123,15 @@ Run the SQL to find some examples of offending records
 - Phone a friend :)
 
 ---
+name:working-session
+# Working session
+* Break things!
+    * Write some bad SQL
+    * Write some bad YAML
+    * Break a test
+    * Use a bad `ref`
+* Fix things 😌
+---
 
 background-color: orange
 class: middle, bottom
