--- a/_lessons/109.html
+++ b/_lessons/109.html
@@ -17,7 +17,7 @@ layout: false
 
 - This is how you ship/deliver/release your work.
 - You _cannot_ merge code that is not approved.
-- Your PR is your chance to make the argument that your code _should_ be merged. 
+- Your PR is your chance to make the argument that your code _should_ be merged.
 It's not a chore, it's a powerful tool!
 
 ---
@@ -27,8 +27,8 @@ It's not a chore, it's a powerful tool!
 Pull requests should:
 
 - Tackle a single functional grouping of work.
-- Include a description that explains the context of the changes to the code, as 
-well as what the code does. It's useful to include links to relevant cards/tickets, 
+- Include a description that explains the context of the changes to the code, as
+well as what the code does. It's useful to include links to relevant cards/tickets,
 other PRs, dbt docs, and screenshots of updated DAGs.
 - Explain in detail any breaking changes after merging this code in production,
 or what needs to be done to merge the code successfully.
@@ -43,7 +43,7 @@ _Check out [Fishtown's git guide](https://github.com/fishtown-analytics/corp/blo
 
 # WIP PRs
 
-Pull requests can be used to collaborate on code, as they are a great way to 
+Pull requests can be used to collaborate on code, as they are a great way to
 share the code you've written so far. In this scenario, use a **draft** pull request.
 
 ### Caveat
@@ -58,16 +58,22 @@ draft or otherwise.
 - Found a bug?
 - Have an idea for an improvement?
 
-Open an [issue](https://guides.github.com/features/issues/)! You don't need to 
+Open an [issue](https://guides.github.com/features/issues/)! You don't need to
 have the code already written. If you get into a habit now of communicating
 ideas and in-progress work to your colleagues, you'll thank yourself later.
 
 ---
-
-background-color: orange
-class: middle, bottom
+name:working-session
 
 # Ready, set, open!
+## Summary of working sessions from today:
+* [Pre-work](https://tutorial.getdbt.com/learn/setting-up/): Build your first dbt project
+* [103 dbt Fundamentals](103#working-session): Add an `orders` model to your project
+* [104 Data Warehouse Design](104#working-session): Re-organize your project
+* [105 Testing & CI](105#working-session): Add tests to your `orders` model
+* [106 Sources](106#working-session): Use sources for `jaffle_shop` and `stripe`
+* [107 Docs](107#working-session): Add a docs block to your project
 
+When you're ready, open a PR and tag a classmate to review it!
 ???
 Open a pull request, and tag a classmate to review it!
