--- a/_lessons/105.html
+++ b/_lessons/105.html
@@ -1,20 +1,204 @@
 ---
 layout: presentation
 title: Testing & CI
-lesson: 106
+lesson: 105
 estimated_teaching_time: 30
 teaching_method: live demo + slides. Questions encouraged.
 working_session: true
 ---
+# Testing & CI
+---
+layout: false
+# Refresher:
+--
 
-testing/ci
-- we added tests but when do we run them?
+## From 102: The Analytics Engineering Viewpoint
+**Analytics code should have quality assurance**
+* Run automated tests on source data and on transformed data to ensure that SQL works as intended
+* Ensure source data is up to date
 
-- questions?
+--
+
+## From 103: dbt Fundamentals
+**Tests** are assertions you make about your **models**.
+
+When you execute the `test` **command** dbt iterates through the schema files (`models/**.yml`) to construct `select` queries.
+
+These queries return `0` when your assertion is true, otherwise the test fails.
+???
+We've already touched on these concepts a couple of times.
+
+---
+# Examples:
+.left-column[
+```yml
+version: 2
+
+models:
+  - name: customers
+    columns:
+      - name: customer_id
+        tests:
+          - not_null
+
+```
+]
+--
+.right-column[
+```sql
+
+select
+  count(*)
+
+from analytics.customers
+where customer_id is null
+
+```
+
+]
+???
+Teacher notes: talk about how these relate
+---
+# Examples:
+.left-column[
+```yml
+version: 2
+
+models:
+  - name: customers
+    columns:
+      - name: customer_id
+        tests:
+          - not_null
+          - unique
+
+```
+]
+--
+.right-column[
+```sql
+
+select count(*) from (
+  select
+    customer_id
+
+  from analytics.customers
+  group by customer_id
+  having count(*) > 1
+)
+
+```
+]
+
+---
+
+# dbt's built-in tests:
+* `unique`
+* `not_null`
+* `accepted_values`
+* `relationships`
+
+---
+# Q: Why might a test fail?
+--
+
+1. The SQL in your model doesn’t do what you intended.
+
+--
+
+```sql
+select
+    customers.customer_id,
+    customer_orders.number_of_orders
+from customers
+
+left join customer_orders using (customer_id)
+
+```
+
+```yml
+version: 2
+
+models:
+  - name: customers
+    columns:
+      - name: number_of_orders
+        tests:
+          - not_null
+```
+--
+
+```sql
+select
+    customers.customer_id,
+    coalesce(customer_orders.number_of_orders, 0) as number_of_orders
+from customers
+
+left join customer_orders using (customer_id)
+```
+???
+Examples:
+* Bad deduping
+* Bad joins
+
+---
+# Q: Why might a test fail?
+
+1. The SQL in your model doesn’t do what you intended
+--
+
+2. An assumption about your source data is wrong.
+
+--
+    * non-unique IDs
+    * Missing data
+    * NULLs you weren't expecting
+
+---
+# Q: Why might a test fail?
+
+1. The SQL in your model doesn’t do what you intended.
+2. An assumption about your source data is wrong.
+
+--
+3. A previously-true assumption about your underlying source data is no longer true
+--
+
+    * A previously unique key is no longer unique
+    * You have a new payment method
+
+---
+# Q: What should you test?
+--
+* Good rules of thumb:
+    * Test primary keys (`unique`, `not_null`)
+    * Test fields that you use in downstream models
+
+---
+# Q: When should you run tests?
+--
+* When you first check out a project
+* During development
+* When you want to merge your code
+* Whenever you run dbt in production
 
 ???
-Note to teacher:
-- The following several presentations 
-(Testing, Sources, Docs, Debugging Models, and Opening a PR)
-are thin conceptual overviews that should dovetail naturally with
-the group's working sessions.
+Demonstration:
+
+---
+# Testing changes to code
+* Run tests on merge
+---
+# Testing in production
+* How do you know if things go wrong?
+* Alerting / monitoring
+
+
+
+
+---
+name:working-session
+
+# Working session
+* Ensure that your (new) `orders` model has tests on it
+---
