--- a/lessons.html
+++ b/lessons.html
@@ -1,10 +1,47 @@
 ---
-layout: story
+layout: page
 permalink: /lessons/
 ---
 
-<h1>Lessons</h1>
+<div class="bg-navy-darker">
+	<div class="section-lg text-white text-navy-lightest">
+		<div class="container">
+			<div class="row">
+				<div class="col-lg-8">
+					<div class="text-contain">
+						<h1 class="h0">Lessons</h1>
+					</div>
+				</div>
+			</div>
+		</div>
+	</div>
+	<div class="mask mask-ne text-white"></div>
+</div>
 
-{% for lesson in site.lessons %}
-    <p><a href="{{lesson.url}}">{{lesson.lesson}}</a>. {{lesson.title}}</p>
-{% endfor %}
+<div class="bg-white">
+	<div class="mask mask-ne text-white"></div>
+	<div class="mask mask-sw text-white"></div>
+	<div class="section">
+		<div class="text-contain">
+			<div class="row">
+				<div class="col-lg-12 col-bottomless">
+                </div>
+            </div>
+			<div class="row">
+                {% for lesson in site.lessons %}
+                {% if lesson.lesson == 101 or lesson.lesson == 201 %}
+                <div class="col-md-6">
+                    {% if lesson.lesson == 101 %} <h4> Day One: Foundations </h4> {% endif %}
+                    {% if lesson.lesson == 201 %} <h4> Day Two: Applications </h4> {% endif %}
+                        <ul class='list-icons text-med text-heading text-left'>
+                {% endif %}
+                            <li><span class='arrow-right text-blue text-medium list-icon'></span><a href="{{lesson.url}}">{{lesson.lesson}}</a> {{lesson.title}}</li>
+                {% if lesson.lesson == 109 or lesson.lesson == 209 %}
+                        </ul>
+                    </div>
+                {% endif %}
+                {% endfor %}
+			</div>
+		</div>
+    </div>
+</div>
