LRest of Claires lessons

--- a/_lessons/104.html
+++ b/_lessons/104.html
@@ -421,3 +421,6 @@ name: working-session
 Refactor your project to be consistent with how we (Fishtown) structure our dbt project. Consider
 - model naming
 - organization within directories
+
+## Bonus:
+Try using the [schema](https://docs.getdbt.com/docs/using-custom-schemas#section-what-is-a-custom-schema) configuration to split your models across multiple schemas
